orquestacionKubernetes/namespace-crud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aarellano
  labels:
    tipo: app-crud
