orquestacionKubernetes/crud-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-db
  labels: 
    app: crud-mysql
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: crud-mysql
    tier: backend
