orquestacionKubernetes/crud-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-php
  labels:
    app: crud-app
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: crud-app
    tier: frontend
