orquestacionKubernetes/ingress-crud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-crud
  annotations:
    ngix.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.aarellano.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-php
            port:
              number: 80
